kubernetes/apps/ai/ollama/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: ollama
  template:
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: ollama
          image: "ollama/ollama:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 11434
          resources:
            limits:
              cpu: 100m
              memory: 8Gi
      nodeSelector:
        specialty: ai
