kubernetes/apps/ai/ollama/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
spec:
  type: ClusterIP
  selector:
    app: ollama
  externalTrafficPolicy: Local
  ports:
    - port: 11434
      targetPort: http
      protocol: TCP
      name: http
