kubernetes/apps/ai/ollama/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "ollama.${domain}"
      secretName: "tls-ollama"
  rules:
    - host: "ollama.${domain}"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: ollama
                port:
                  number: 8080
